--- a/.env
+++ b/.env
@@ -8,7 +8,7 @@ APP_URL=http://localhost
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=sidra
+DB_DATABASE=icts
 DB_USERNAME=root
 DB_PASSWORD=
 
